# ML_learning

./: .gitignore  ARCHITECTURE_EXPLAINED.md  BABY_MODEL_GUIDE.md  HOW_TO_RUN.md  ML_Percepetron.py  Makefile  QUICK_START.md  README.md  RESTRUCTURE_GUIDE.md  START_HERE.md  baby_language_model.keras  baby_language_model.py  baby_language_model_chars.npy  baby_model_colab.py  baby_transformer_model.py  main.py  predictaion.py  pyproject.toml  run_baby_model.py  simple_run.py
data/raw/: baby_talk_dataset.txt  gold_prices.csv  perceptron_data.csv
src/ml_learning/: __init__.py
src/ml_learning/config/: __init__.py  settings.py
src/ml_learning/data/: __init__.py  loaders.py
src/ml_learning/models/: __init__.py  baby_language.py  perceptron.py  prediction.py
src/ml_learning/utils/: __init__.py  logging.py  visualization.py
tests/: __init__.py  conftest.py  test_baby_language.py  test_perceptron.py  test_prediction.py
